--- a/src/db/app.json
+++ b/src/db/app.json
@@ -204,7 +204,7 @@
   "order": [],
   "event": [{
       "id": 1,
-      "date": "2020-03-31",
+      "date": "2020-04-04",
       "hour": "12:30",
       "table": 1,
       "repeat": false,
@@ -214,7 +214,7 @@
     },
     {
       "id": 2,
-      "date": "2020-03-31",
+      "date": "2020-04-01",
       "hour": "16:00",
       "table": 3,
       "repeat": "daily",
@@ -224,7 +224,7 @@
     },
     {
       "id": 3,
-      "date": "2020-03-31",
+      "date": "2020-04-04",
       "hour": "12:00",
       "table": 3,
       "repeat": "daily",
@@ -234,7 +234,7 @@
     },
     {
       "id": 4,
-      "date": "2020-03-31",
+      "date": "2020-04-04",
       "hour": "13:00",
       "table": 2,
       "repeat": "daily",
@@ -244,7 +244,7 @@
     },
     {
       "id": 5,
-      "date": "2020-03-31",
+      "date": "2020-04-01",
       "hour": "18:00",
       "table": 2,
       "repeat": "daily",
@@ -254,6 +254,15 @@
     }
   ],
   "booking": [
-
+    {
+      "id": 5,
+      "date": "2020-04-01",
+      "hour": "18:00",
+      "table": 2,
+      "repeat": "daily",
+      "duration": 2,
+      "ppl": 3,
+      "starters": ["lemonWater"]
+    }
   ]
 }
